finished lit review

--- a/Report.tex
+++ b/Report.tex
@@ -32,6 +32,7 @@
     % Abreviations
 \usepackage{acro}
 \input{Report/00 Front-Matter/Definitions}
+\usepackage{multicol} % For multiple columns
 
     % Other
 \usepackage{amsmath} %For both in-line and equation mode
@@ -48,6 +49,7 @@
 \usepackage{tabularx}
 \usepackage[toc,page]{appendix} 
 \usepackage{enumitem}
+\usepackage[nottoc]{tocbibind} % Auto Adds lists to TOC
 
 % Bibliography
 \usepackage[style=ieee, backend=biber]{biblatex} 
