--- a/Report/00 Front-Matter/Abbreviations.tex
+++ b/Report/00 Front-Matter/Abbreviations.tex
@@ -4,9 +4,9 @@
 \addcontentsline{toc}{chapter}{Abbreviations}
 
 
-
-\printacronyms[heading=none, sort=true]
-
+\begin{multicols*}{2}
+    \printacronyms[heading=none, sort=true]
+\end{multicols*}
 
 
 
