--- a/Report/00 Front-Matter/Definitions.tex
+++ b/Report/00 Front-Matter/Definitions.tex
@@ -39,6 +39,13 @@
 
 % ------------------------------------------------------------
 
+\DeclareAcronym{cccv}{
+    short = CC-CV,
+    long = Constant Current - Constant Voltage
+}
+
+% ------------------------------------------------------------
+
 \DeclareAcronym{btm}{
     short = BTM,
     long = Battery Thermal Management
@@ -348,7 +355,7 @@
 
 \DeclareAcronym{dvfs}{
     short = DVFS,
-    long = Dynamic Voltage and Frequency Scaling
+    long = Dynamic Voltage \& Frequency Scaling
 }
 
 
