--- a/Report/00 Front-Matter/Lists.tex
+++ b/Report/00 Front-Matter/Lists.tex
@@ -6,20 +6,21 @@
 %     Natural (1,2,3,...) 
 %     Sectional (1.1, 1.2 for chapter 1. 2.1, 2.2,... for chapter 2) 
 
-\chapter*{List of Tables and Figures}
-\addcontentsline{toc}{chapter}{List of Tables and Figures}
+%\chapter*{List of Tables and Figures}
+
 
 \listoffigures
 %\addcontentsline{toc}{section}{List of Figures}
 \numberwithin{figure}{section}
 
+
 \listoftables
 %\addcontentsline{toc}{section}{List of Tables}
 \numberwithin{table}{section}
 
-%Delete me if you're not putting algorithms in or you don't want it as contents. Same applies with the two above ^
-\listofalgorithms
-%\addcontentsline{toc}{section}{List of Algorithms}
-\numberwithin{algorithm}{section}
+% %Delete me if you're not putting algorithms in or you don't want it as contents. Same applies with the two above ^
+% \listofalgorithms
+% %\addcontentsline{toc}{section}{List of Algorithms}
+% \numberwithin{algorithm}{section}
 
-\newpage
+%\newpage
